--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="reset.css">
@@ -8,20 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<title>first_project</title>
 </head>
-<body>
-	<header>
-		<img src="image/logo.png" alt="logo_wishbone">
-		<nav>
-			<ul>
-				<li>Projects</li>
-				<li>About</li>
-				<li>News</li>
-				<li>Team</li>
-				<li>Contact</li>
-			</ul>
-			<button>Get template</button>
-		</nav>
-	</header>
+<body>	
 	<main>
 		<section class="section_h1">	
 			<div class="hero_div">
