featured_section_work

--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
 					<h2>Featured projects</h2>
 					<p>Some of the latest and greatest projects from us here at Wishbone+Partners.</p>
 				</div>
+				<div class="picture_div">
+					<img src="image/featured_picture_1.jpg" alt="building">
+					<div>
+						<p>NEW YORK</p>
+						<h4>Big Road Brewery</h4>
+						<button>Read more</button>
+					</div>
+					<img src="image/featured_picture_3.jpg" alt="building">
+				</div>
+				<span>View all projects</span>
 			</div>
 		</section>
 	</main>
