Create new section

--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
 				<div class="picture_div">
 					<img src="image/featured_picture_1.jpg" alt="building">
 					<div>
-						<p>NEW YORK</p>
-						<h4>Big Road Brewery</h4>
-						<button>Read more</button>
+						<div class="div_div_">
+							<p>NEW YORK</p>
+							<h4>Big Road Brewery</h4>
+							<button>Read more</button>
+						</div>
 					</div>
 					<img src="image/featured_picture_3.jpg" alt="building">
 				</div>
