New+section_and_css

--- a/index.html
+++ b/index.html
@@ -148,6 +148,65 @@
 				<span>View all projects</span>
 			</div>
 		</section>
+		<section class="our_team">
+			<div class="our_team_container">
+				<div class="our_team_hero">
+					<h2>
+						Meet our team
+					</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis.
+					</p>
+					<span>See team</span>
+				</div>
+				<div class="our_team_content">
+					<span class="worker_span">
+						<img src="image/worker_photo.jpg" alt="Stephen_Collier_photo">
+						<span class="worker_rewiew">
+							<h3>Stephen Collier</h3> <!--Bad idea h2-->
+							<p>Senior Partner</p>
+						</span>
+					</span>
+					<span class="worker_span">
+						<img src="image/worker_photo_2.jpg" alt="">
+						<span class="worker_rewiew">
+							<h3>Ferris Wonder</h3>
+							<p>Associate Partner</p>
+						</span>
+					</span>
+					<span class="worker_span">
+						<img src="image/worker_photo_3.jpg" alt="">
+						<span class="worker_rewiew">
+							<h3>Niko Ferry</h3>
+							<p>Partner</p>
+						</span>
+					</span>
+				</div>
+				<div class="our_team_content">
+					<span class="worker_span">
+						<img src="image/worker_photo_4.jpg" alt="">
+						<span class="worker_rewiew">
+							<h3>Nolan Peters</h3>
+							<p>Associate</p>
+						</span>
+					</span>
+					<span class="worker_span">
+						<img src="image/worker_photo_5.jpg" alt="">
+						<span class="worker_rewiew">
+							<h3>Aria Stone</h3>
+							<p>Senior Partner</p>
+						</span>
+					</span>
+				</div>
+			</div>
+		</section>
+		<section class="pre_footer">
+			<div>
+				<p>get in touch</p>
+				<h2>Think we would be a good fit for your next project?</h2>
+			</div>
+			<span>Get in touch</span>
+		</section>
 	</main>
 </body>
 </html>
