--- a/index.html
+++ b/index.html
@@ -207,6 +207,20 @@
 			</div>
 			<span>Get in touch</span>
 		</section>
+		<section class="footer">
+			<div class="left_div">
+				<img src="image/logo.png" alt="logo_wishboune">
+				<p>Powered by Webflow</p>
+				<span>All rights reserved Wishboune+Partners, Inc.Licensing</span>
+			</div>
+			<div class="right_div">
+				<span class="social_network_span">
+					<img src="image/twitter.png" alt="twitter_logo">
+					<img src="image/instagram.png" alt="instagram_logo">
+					<img src="image/facebook.png" alt="facebook_logo">
+				</span>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
