creating_burger_in_header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 <body>
 	<header>
-		<img src="image/logo.png" alt="logo_wishbone">
+		<img src="image/logo.png" alt="logo_wishbone">	
+		<button class="hidden_button">Get template</button>
+		<div class="burger_menu" id="burger_menu"> 
+			<span class="burger_line"></span>
+			<span class="burger_line"></span>
+			<span class="burger_line"></span>
+		</div>	
 		<nav>
 			<ul>
 				<li>Projects</li>
@@ -19,7 +25,7 @@
 				<li>Team</li>
 				<li>Contact</li>
 			</ul>
-			<button>Get template</button>
+			<button class="desktop_button">Get template</button>
 		</nav>
 	</header>
 	<main>
@@ -222,5 +228,6 @@
 			</div>
 		</section>
 	</main>
+	<script src="script.js"></script>
 </body>
 </html>
