fix_button_position

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 	<header>
 		<img src="image/logo.png" alt="logo_wishbone">	
-		<button class="hidden_button">Get template</button>
 		<div class="burger_menu" id="burger_menu"> 
 			<span class="burger_line"></span>
 			<span class="burger_line"></span>
@@ -24,6 +23,7 @@
 				<li>News</li>
 				<li>Team</li>
 				<li>Contact</li>
+				<button class="ul_button">Get template</button>
 			</ul>
 			<button class="desktop_button">Get template</button>
 		</nav>
