--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		</nav>
 	</header>
 	<main>
-		<section class="left_div_first_section">	
-			<div class="hero_div">
+		<section class="hero_section">	
+			<div class="hero_left_container">
 				<div>
 					<img src="image/main_logo.png" alt="logo_wishbone">
 					<h1>The home of beautiful architecture.</h1>
@@ -38,7 +38,7 @@
 					<a href="#">Read more</a>
 				</div>
 			</div>
-			<div class="hero_image">
+			<div class="hero_right_container">
 				<img src="image/hero_image.jpg">
 			</div>
 		</section>	
