--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 				<img src="image/hero_image.jpg">
 			</div>
 		</section>	
-		<section class="our_firm">
+		<section class="our_firm_section">
 			<div class="our_firm_container">
 				<span><h2>Our firm</h2></span>
-				<div class="text">
+				<div class="our_firm_container_div">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-					<div class="worker_div">
-						<img class="worker_photo" src="image/worker_photo.jpg" alt="worker_photo">
+					<div class="our_firm_worker_div">
+						<img class="our_firm_worker_photo" src="image/worker_photo.jpg" alt="worker_photo">
 						<span>
 							<h2>Stephen Collier</h2>
 							<p>Senior Partner</p>
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="third_section">
+		<section class="third_section for_repeat_section">
 			<div>
 				<h4>REEDING HOUSE</h4>
 				<p class="only_back_image_p">
@@ -68,26 +68,26 @@
 				</p>
 			</div>	
 		</section>
-		<section class="our_process">
+		<section class="our_process for_repeat_section">
 			<div class="our_process_container">
 				<p>OUR PROCESS</p>
 				<h2>How we do what we do</h2>
 				<div class="our_process_content">
-					<div class="our_item">
+					<div class="our_process_content_div">
 						<img src="image/brush.png" alt="paint_item">
 						<span>Sketching</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae tempor leo iaculis.
 						</p>
 					</div>
-					<div class="our_item">
+					<div class="our_process_content_div">
 						<img src="image/ruler.png" alt="paint_item">
 						<span>Finalizing</span>
 						<p>
 							Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor leo iaculis luctus sapien ac arcu tempor, vitae.
 						</p>
 					</div>
-					<div class="our_item">
+					<div class="our_process_content_div">
 						<img src="image/build.png" alt="paint_item">
 						<span>Building</span>
 						<p>
@@ -96,29 +96,28 @@
 					</div>
 				</div>
 			</div>
-
 		</section>
 		<section class="stairs_section"> 
-			<div>
+			<div class="stairs_section_container">
 				<h4>The marble staircase</h4>
 					<p class="only_back_image_p">
 						Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.
 					</p>
 			</div>
 		</section>
-		<section class="happy_customers">
-			<div class="happy_container">
+		<section class="happy_section">
+			<div class="happy_section_container">
 				<div>
 					<span> PRIOR CLIENTS</span>
 					<h3>Happy customers</h3>
 					<p>Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
 				</div>
-				<div class="brand">
-					<div class="brand_container">
+				<div>
+					<div class="happy_brand_container">
 						<img src="image/happy_image1.png" alt="brand_icon"">
 						<img src="image/happy_image2.png" alt="brand_icon"">
 					</div>
-					<div class="brand_container">
+					<div class="happy_brand_container">
 						<img src="image/happy_image3.png" alt="brand_icon"">
 						<img src="image/happy_image4.png" alt="brand_icon"">
 					</div>
@@ -126,8 +125,8 @@
 				
 			</div>
 		</section>
-		<section class="whool">
-			<div>
+		<section class="whool_section for_repeat_section">
+			<div class="whool_section_content">
 				<h4>The swirling staircase</h4>
 					<p class="only_back_image_p">
 						Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.
@@ -140,10 +139,10 @@
 					<h2>Featured projects</h2>
 					<p>Some of the latest and greatest projects from us here at Wishbone+Partners.</p>
 				</div>
-				<div class="picture_div">
+				<div class="featured_picture_content">
 					<img src="image/featured_picture_1.jpg" alt="building">
 					<div>
-						<div class="div_div_">
+						<div class="feature_center_div">
 							<p>NEW YORK</p>
 							<h4>Big Road Brewery</h4>
 							<button>Read more</button>
@@ -154,7 +153,7 @@
 				<span>View all projects</span>
 			</div>
 		</section>
-		<section class="our_team">
+		<section class="our_team_section">
 			<div class="our_team_container">
 				<div class="our_team_hero">
 					<h2>
