--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		</section>
 		<section class="happy_section">
 			<div class="happy_section_container">
-				<div>
+				<div class="happy_hero">
 					<span> PRIOR CLIENTS</span>
 					<h3>Happy customers</h3>
 					<p>Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
