--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					<span class="worker_span">
 						<img src="image/worker_photo.jpg" alt="Stephen_Collier_photo">
 						<span class="worker_rewiew">
-							<h3>Stephen Collier</h3> <!--Bad idea h2-->
+							<h3>Stephen Collier</h3> 
 							<p>Senior Partner</p>
 						</span>
 					</span>
